--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="preload" href="css/style.css" as="style">
-  <link rel="preload" href="js/app.js" as="script">
   <script defer src="js/app.js"></script>
 </head>
 
@@ -43,63 +41,27 @@
   </section>
 
   <main>
+    <!-- Trending Section -->
     <section class="section" id="trending">
       <div class="container section-header">
         <h2>Trending Manga</h2>
       </div>
-      <div class="container filters" id="filters">
-        <div class="filter">
-          <label for="filter-type">Type</label>
-          <select id="filter-type" onchange="applyFilters()">
-            <option value="all" selected>All</option>
-            <option value="manga">Manga</option>
-            <option value="manhwa">Manhwa</option>
-            <option value="manhua">Manhua</option>
-          </select>
-        </div>
-        <div class="filter">
-          <label for="filter-lang">Language</label>
-          <select id="filter-lang" onchange="applyFilters()">
-            <option value="all" selected>All</option>
-            <option value="en">English</option>
-            <option value="ja">Japanese</option>
-            <option value="ko">Korean</option>
-            <option value="zh">Chinese</option>
-          </select>
-        </div>
-        <div class="filter">
-          <label for="filter-sort">Sort</label>
-          <select id="filter-sort" onchange="applyFilters()">
-            <option value="default" selected>Default</option>
-            <option value="latest">Latest</option>
-            <option value="most-viewed">Most Viewed</option>
-            <option value="top-rated">Top Rated</option>
-            <option value="new">New</option>
-          </select>
-        </div>
-        <div class="filter">
-          <label for="filter-rating">Min Rating</label>
-          <input type="range" id="filter-rating" min="0" max="10" step="1" value="0" oninput="updateRatingLabel(this.value)" onchange="applyFilters()" />
-          <span id="filter-rating-value">0</span>
-        </div>
-        <div class="filter">
-          <label for="filter-genre">Genre</label>
-          <input type="text" id="filter-genre" placeholder="e.g. action" oninput="debouncedApplyFilters()" />
-        </div>
-      </div>
       <div class="container scroller" id="manga-list"></div>
-      <div class="container load-more-row"><button class="btn" id="load-more" onclick="loadMoreTrending()">Load More</button></div>
-      <div id="sentinel-trending" style="height:1px"></div>
+      <div class="container load-more-row">
+        <button class="btn" id="load-more" onclick="loadMoreTrending()">Load More</button>
+      </div>
     </section>
 
+    <!-- Updates Section -->
     <section class="section" id="updates">
       <div class="container section-header">
         <h2>Latest Updates</h2>
         <p class="muted">Recently updated chapters</p>
       </div>
       <div class="container grid" id="updates-list"></div>
-      <div class="container load-more-row"><button class="btn btn-ghost" id="load-more-updates" onclick="loadMoreUpdates()">Load More</button></div>
-      <div id="sentinel-updates" style="height:1px"></div>
+      <div class="container load-more-row">
+        <button class="btn btn-ghost" id="load-more-updates" onclick="loadMoreUpdates()">Load More</button>
+      </div>
     </section>
   </main>
 
@@ -109,8 +71,9 @@
     <div class="search-box">
       <input type="text" id="search-input" placeholder="Search for manga..." oninput="searchManga()" />
       <div class="results" id="search-results"></div>
-      <div class="load-more-row"><button class="btn btn-ghost" id="search-load-more" onclick="loadMoreSearch()">Load More</button></div>
-      <div id="sentinel-search" style="height:1px"></div>
+      <div class="load-more-row">
+        <button class="btn btn-ghost" id="search-load-more" onclick="loadMoreSearch()">Load More</button>
+      </div>
     </div>
   </div>
 
@@ -154,5 +117,102 @@
     </div>
   </footer>
 
+<script>
+const API_BASE = 'https://mangareader-api.vercel.app';
+
+// --- Generic fetch ---
+async function apiGET(path){
+  const res = await fetch(API_BASE + path);
+  if(!res.ok) throw new Error('API ' + res.status);
+  return res.json();
+}
+
+// --- Search ---
+async function searchManga(){
+  const q = document.getElementById('search-input').value.trim();
+  const results = document.getElementById('search-results');
+  if(!q){ results.innerHTML = ''; return; }
+  results.innerHTML = 'Loading...';
+  try{
+    const data = await apiGET('/api/search?q=' + encodeURIComponent(q));
+    results.innerHTML = data.results.map(m=>`
+      <div class="result-item" onclick="openManga('${m.slug}')">
+        <img src="${m.cover}" alt="">
+        <div>${m.title}</div>
+      </div>`).join('');
+  }catch(e){
+    results.innerHTML = '<div class="error">Search failed</div>';
+  }
+}
+
+// --- Open Manga Info ---
+async function openManga(slug){
+  closeSearchModal();
+  const info = await apiGET('/api/info/' + encodeURIComponent(slug));
+  document.getElementById('reader-cover').src = info.cover;
+  document.getElementById('reader-title').textContent = info.title;
+  document.getElementById('reader-description').textContent = info.author || '';
+  
+  const chapSelect = document.getElementById('chapter');
+  chapSelect.innerHTML = '';
+  info.chapters.slice().reverse().forEach(ch=>{
+    const opt = document.createElement('option');
+    opt.value = ch.id;
+    opt.textContent = ch.name || ('Chapter ' + (ch.number ?? ''));
+    chapSelect.appendChild(opt);
+  });
+
+  if(info.chapters.length){
+    chapSelect.selectedIndex = 0;
+    loadChapter(info.chapters.slice().reverse()[0].id);
+  }
+  document.getElementById('reader-modal').setAttribute('aria-hidden','false');
+}
+
+// --- Load Chapter Pages ---
+let currentPages = [];
+let currentPageIndex = 0;
+
+async function loadChapter(chId){
+  const data = await apiGET('/api/chapter/' + encodeURIComponent(chId));
+  currentPages = data.images || data.pages || [];
+  currentPageIndex = 0;
+  renderPage();
+  const pageSelect = document.getElementById('page');
+  pageSelect.innerHTML = '';
+  currentPages.forEach((_,i)=>{
+    const opt = document.createElement('option');
+    opt.value = i;
+    opt.textContent = 'Page ' + (i+1);
+    pageSelect.appendChild(opt);
+  });
+}
+
+function renderPage(){
+  if(currentPages.length===0) return;
+  document.getElementById('reader-image').src = currentPages[currentPageIndex];
+  document.getElementById('page').value = currentPageIndex;
+}
+
+function changePage(){
+  currentPageIndex = parseInt(document.getElementById('page').value,10);
+  renderPage();
+}
+function nextPage(){
+  if(currentPageIndex < currentPages.length-1){ currentPageIndex++; renderPage(); }
+}
+function prevPage(){
+  if(currentPageIndex > 0){ currentPageIndex--; renderPage(); }
+}
+function changeChapter(){
+  const chId = document.getElementById('chapter').value;
+  loadChapter(chId);
+}
+
+// --- Modal Controls ---
+function openSearchModal(){ document.getElementById('search-modal').setAttribute('aria-hidden','false'); }
+function closeSearchModal(){ document.getElementById('search-modal').setAttribute('aria-hidden','true'); }
+function closeReader(){ document.getElementById('reader-modal').setAttribute('aria-hidden','true'); }
+</script>
 </body>
 </html>
